  (in which case the class will be constructed by appending Source to the type 
  name), a class (which will be instantiate and passed the control, 
  configuration and mapping) and finally an actual Source instance.
  
0.8.2 - April 15, 2007
* Fixed bug with premature destination closing.
* Added indexes to execution records table.
* Added a PrintRowProcessor.
* Added support for conditions and "group by" in the database source.
* Added after_initialize hook in Processor base class.
* Added examples directory

0.8.3 - May 13, 2007
* Added patches from Andy Triboletti

0.8.4 - May 24, 2007
* Added fix for backslash in file writer

0.9.0 - August 9, 2007
* Added support for batch processing through .ebf files. These files are
  essentially control files that apply settings to an entire ETL process.
* Implemented support for screen blocks. These blocks can be used to test
  the data and raise an error if the screens do not pass.
* Connections are now cached in a Hash available through 
  ETL::Engine.connection(name). This should be used rather than including
  connection information in the control files.
* Implemented temp table support throughout.
* DateDimensionBuilder now included in ActiveWarehouse ETL directly.
* Time calculations for fiscal year now included in ActiveWarehouse ETL.

0.9.1 -
* SQLResolver now uses ETL::Engine.table so it may utilize temp tables. (aeden)
* Added Thibaut Barrère's encode processor.
* Added MockSource and MockDestination test helpers (thbar)
* Added the block processor. Can call a block once (pre/post processor)
  or once for each row (after_read/before_write row processor) (thbar)
* Changed temp table to use new AdapterExtension copy_table method (aeden)
* Added bin/etl.cmd windows batch - just add the bin folder to your PATH
  and it will let you call etl on an unpacked/pistoned version of AW-ETL (thbar)
* Upgraded to support Rails 2.1. No longer compatible with older versions of Rails.
* Added ETL::Builder::TimeDimensionBuilder